# databricks-kube-operator

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README (1).md  README.md  SUMMARY.md  index.yaml  tutorial.md
.github/: dependabot.yml
.github/workflows/: helm.yml  rust.yml
chart/: Chart.yaml
chart/templates/: crds.yaml
charts/databricks-kube-operator/: Chart.yaml  README.md  values.yaml
databricks-kube/: Cargo.toml
databricks-kube/src/: config.rs  context.rs  crdgen.rs  error.rs  lib.rs  main.rs  rest_config.rs  util.rs
databricks-kube/src/controllers/: databricks_job.rs  mod.rs
databricks-kube/src/crds/: databricks_job.rs  databricks_secret.rs  databricks_secret_scope.rs  git_credential.rs  mod.rs  repo.rs
databricks-kube/src/traits/: mod.rs  remote_api_resource.rs  remote_api_status.rs  remote_resource.rs  rest_config.rs  synced_api_resource.rs
databricks-kube/tests/: remote_api_resource_test.rs  status_api_resource_test.rs  synced_api_resource_test.rs  util_test.rs
databricks-kube/tests/common/: fake_resource.rs  mock_k8s.rs  mod.rs
databricks-kube/tests/fixtures/: random-1.json  random-2.json
databricks-rust-git-credentials/: Cargo.toml  README.md
databricks-rust-git-credentials/.openapi-generator/: FILES
databricks-rust-git-credentials/docs/: CreateCredentialRequest.md  DefaultApi.md  Error.md  GetCredentialResponse.md  GetCredentialsResponse.md  UpdateCredentialRequest.md
databricks-rust-git-credentials/src/apis/: configuration.rs  default_api.rs
databricks-rust-git-credentials/src/models/: create_credential_request.rs  error.rs  get_credential_response.rs  get_credentials_response.rs  mod.rs  update_credential_request.rs
databricks-rust-jobs/: Cargo.toml  README.md
databricks-rust-jobs/.openapi-generator/: FILES
databricks-rust-jobs/docs/: AccessControlList.md  AccessControlRequest.md  AccessControlRequestForGroup.md  AccessControlRequestForServicePrincipal.md  AccessControlRequestForUser.md  AutoScale.md  AwsAttributes.md  CanManage.md  CanManageRun.md  CanView.md  ClusterAttributes.md  ClusterCloudProviderNodeInfo.md  ClusterCloudProviderNodeStatus.md  ClusterEvent.md  ClusterEventType.md  ClusterInfo.md  ClusterInstance.md  ClusterLibraryStatuses.md  ClusterLogConf.md  ClusterSize.md  ClusterSource.md  ClusterSpec.md  ClusterState.md  Continuous.md  CronSchedule.md  DbfsStorageInfo.md  DbtOutput.md  DbtTask.md  DefaultApi.md  DockerBasicAuth.md  DockerImage.md  Error.md  EventDetails.md  FileStorageInfo.md  GitSnapshot.md  GitSource.md  InitScriptInfo.md  IsOwner.md  Job.md  JobCluster.md  (+87 more)
databricks-rust-jobs/src/apis/: configuration.rs  default_api.rs  mod.rs
databricks-rust-jobs/src/models/: access_control_list.rs  access_control_request.rs  access_control_request_for_group.rs  access_control_request_for_service_principal.rs  access_control_request_for_user.rs  auto_scale.rs  aws_attributes.rs  can_manage.rs  can_manage_run.rs  can_view.rs  cluster_attributes.rs  cluster_cloud_provider_node_info.rs  cluster_cloud_provider_node_status.rs  cluster_event.rs  cluster_event_type.rs  cluster_info.rs  cluster_instance.rs  cluster_library_statuses.rs  cluster_log_conf.rs  cluster_size.rs  cluster_source.rs  cluster_spec.rs  cluster_state.rs  continuous.rs  cron_schedule.rs  dbfs_storage_info.rs  dbt_output.rs  dbt_task.rs  docker_basic_auth.rs  docker_image.rs  error.rs  event_details.rs  file_storage_info.rs  git_snapshot.rs  git_source.rs  init_script_info.rs  is_owner.rs  job.rs  job_cluster.rs  job_email_notifications.rs  (+88 more)
databricks-rust-openapi/: Cargo.toml  README.md
databricks-rust-openapi/.openapi-generator/: FILES
databricks-rust-openapi/docs/: AccountAccessControlApi.md  AccountAccessControlProxyApi.md  AccountGroupsApi.md  AccountIpAccessListsApi.md  AccountMetastoreAssignmentsApi.md  AccountMetastoresApi.md  AccountNetworkPolicyupdateAccountNetworkPolicyRequest.md  AccountServicePrincipalsApi.md  AccountSettingsdeletePersonalComputeSetting200Response.md  AccountSettingsupdatePersonalComputeSettingRequest.md  AccountStorageCredentialsApi.md  AccountUsersApi.md  AclPermissionsApi.md  AlertsApi.md  ArtifactAllowlistsApi.md  BillableUsageDownloadApi.md  BillingBudget.md  BillingBudgetAlert.md  BillingBudgetList.md  BillingBudgetWithStatus.md  BillingBudgetWithStatusStatusDailyInner.md  BillingCreateLogDeliveryConfigurationParams.md  BillingDeliveryStatus.md  BillingLogDeliveryConfigStatus.md  BillingLogDeliveryConfiguration.md  BillingLogDeliveryStatus.md  BillingLogType.md  BillingOutputFormat.md  BillingUpdateLogDeliveryConfigurationStatusRequest.md  BillingWrappedBudget.md  BillingWrappedBudgetWithStatus.md  BillingWrappedCreateLogDeliveryConfiguration.md  BudgetsApi.md  (+941 more)
databricks-rust-repos/: Cargo.toml  README.md
databricks-rust-secrets/: Cargo.toml  README.md
examples/: databricks-job.yaml  databricks-secret-scope.yaml  databricks-secret.yaml  git-credential.yaml  git-repo.yaml  job.py
openapi/: config-git.yaml  config-repos.yaml  config-secrets.yaml  jobs-2.1-aws.yaml  jobs-2.1-aws.yaml-old  openapi-helper.bb
schema/: jobs-2.1-aws.yaml  openapi-generator.yaml
src/: config.rs  error.rs  main.rs
src/crd/: crdgen.rs  (+1 more)
(+1042 files in other folders)
