[package]
name = "databricks_rust_git_credentials"
version = "2.1.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
schemars = "0.8.11"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
