[package]
name = "databricks_rust_git_credentials"
version = "2.1.1"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
schemars = "0.8.11"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
